--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,26 @@
   tap-highlight-color: transparent;
 }
 
+:root.light {
+  --bg-buttons: #f8f8f8;
+  --bg-body: #f2f2f2;
+  --bg-calculator: #fff;
+  --text-color: #121212;
+  --filter: none;
+}
+
+:root.dark {
+  --bg-buttons: #343434;
+  --bg-body: #121212;
+  --bg-calculator: #232323;
+  --text-color: #fff;
+  --filter: invert(100%);
+}
+
+.light button.calculator--theme--dark, .dark button.calculator--theme--light {
+  opacity: .25;
+}
+
 button {
   background: transparent;
   border: 0;
@@ -13,7 +33,7 @@ button {
 }
 
 body {
-  background-color: #f2f2f2;
+  background-color: var(--bg-body);
   font: 300 1rem "Raleway", sans-serif;
   display: flex;
   align-items: center;
@@ -36,6 +56,7 @@ main {
 }
 
 h1 {
+  color: var(--text-color);
   font-weight: 300;
   font-size: 1.5rem;
   text-align: center;
@@ -43,6 +64,7 @@ h1 {
 }
 
 .by {
+  color: var(--text-color);
   font-size: .7rem;
   padding: 1rem 2rem 0;
   text-align: center;
@@ -50,36 +72,27 @@ h1 {
 }
 
 .calculator {
-  background-color: #fff;
+  background-color: var(--bg-calculator);
   border-radius: 12px;
+  padding-top: .5rem;
 }
 
 .calculator--theme {
+  border-radius: 6px;
+  background-color: var(--bg-buttons);
   display: flex;
   align-items: center;
   justify-content: center;
   gap: .5rem;
-  padding: .5rem;
-
-  --dark: #121212;
-  --light: #f2f3f4;
+  padding: .25rem .5rem;
+  margin: 0 auto;
+  width: min-content;
 }
 
 .calculator--theme>button {
-  background-color: #fff;
-  border: 2px solid;
-  border-radius: 50em;
   display: block;
-  height: 20px;
-  width: 20px;
-}
-
-button.calculator--theme--light {
-  border-color: var(--light);
-}
-
-button.calculator--theme--dark {
-  border-color: var(--dark);
+  transition: filter .2s cubic-bezier(0.23, 1, 0.320, 1);
+  filter: var(--filter);
 }
 
 .calculator--app>header {
@@ -90,6 +103,7 @@ button.calculator--theme--dark {
 .calculator--app b,
 .calculator--app strong {
   display: block;
+  word-break: break-all;
 }
 
 .calculator--app b {
@@ -99,15 +113,14 @@ button.calculator--theme--dark {
 }
 
 .calculator--app strong {
-  color: #121212;
+  color: var(--text-color);
   font-size: 1.9rem;
   min-height: 40px;
-  word-break: break-all;
 }
 
 .calculator--app--buttons {
   border-radius: 12px;
-  background-color: #f8f8f8;
+  background-color: var(--bg-buttons);
   display: grid;
   grid-template-rows: repeat(5, 1fr);
   grid-template-columns: repeat(4, 1fr);
@@ -117,6 +130,7 @@ button.calculator--theme--dark {
 
 .calculator--app--buttons>button {
   border-radius: 12px;
+  color: var(--text-color);
   font-size: 1.35rem;
   font-weight: 300;
   min-height: 60px;
