fix bug of restart operation

--- a/styles.css
+++ b/styles.css
@@ -109,12 +109,14 @@ h1 {
 .calculator--app b {
   color: #787878;
   font-size: 1.25rem;
+  font-weight: 300;
   min-height: 25px;
 }
 
 .calculator--app strong {
   color: var(--text-color);
   font-size: 1.9rem;
+  font-weight: 600;
   min-height: 40px;
 }
 
