--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ h1 {
 .by {
   color: var(--text-color);
   font-size: .7rem;
+  transition: color .5s cubic-bezier(0.23, 1, 0.320, 1);
   padding: 1rem 2rem 0;
   text-align: center;
   width: 100%;
@@ -75,6 +76,7 @@ h1 {
   background-color: var(--bg-calculator);
   border-radius: 12px;
   padding-top: .5rem;
+  transition: background-color .5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
 .calculator--theme {
@@ -85,6 +87,7 @@ h1 {
   justify-content: center;
   gap: .5rem;
   padding: .25rem .5rem;
+  transition: background-color .5s cubic-bezier(0.165, 0.84, 0.44, 1);
   margin: 0 auto;
   width: min-content;
 }
@@ -118,6 +121,7 @@ h1 {
   font-size: 1.9rem;
   font-weight: 600;
   min-height: 40px;
+  transition: color .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .calculator--app--buttons {
@@ -127,6 +131,7 @@ h1 {
   grid-template-rows: repeat(5, 1fr);
   grid-template-columns: repeat(4, 1fr);
   grid-auto-flow: dense;
+  transition: background-color .5s cubic-bezier(0.23, 1, 0.320, 1);
   width: fit-content;
 }
 
@@ -137,7 +142,7 @@ h1 {
   font-weight: 300;
   min-height: 60px;
   min-width: 60px;
-  transition: all .23s cubic-bezier(0.215, 0.610, 0.355, 1);
+  transition: all .5s cubic-bezier(0.215, 0.610, 0.355, 1);
 }
 
 .calculator--app--buttons>button:nth-of-type(-n+3),
