--- a/styles.css
+++ b/styles.css
@@ -56,54 +56,87 @@ a:hover {
   color: darkred;
 }
 
+@keyframes introTitle {
+  from {
+    opacity: 0;
+    transform: translateY(-1rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes introFooter {
+  from {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes introResult {
+  from {
+    opacity: 0;
+    transform: translateY(10rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(10px);
+  }
+}
+
+@keyframes introButtons {
+  from {
+    transform: translateY(-5px);
+    opacity: 0;
+  }
+  
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 main {
   width: min-content;
 }
 
 h1 {
+  animation: introTitle 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) .5s 1 forwards;
   color: var(--text-color);
   font-weight: 300;
   font-size: 1.5rem;
   text-align: center;
   transition: color .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   padding: 0 0 1rem;
-}
-
-@keyframes enterResult {
-  from {
-    transform: translateY(10rem);
-  }
-
-  to {
-    transform: translateY(10px);
-  }
-}
-
-@keyframes enterButtons {
-  from {
-    filter: blur(10px);
-    opacity: 0;
-  }
-  
-  to {
-    filter: blur(0);
-    opacity: 1;
-  }
+  opacity: 0;
+  transform: translateY(-1rem);
 }
 
 .by {
+  animation: introFooter 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) .5s 1 forwards;
   color: var(--text-color);
   font-size: .7rem;
   transition: color .5s cubic-bezier(0.23, 1, 0.320, 1);
   padding: 1rem 2rem 0;
+  opacity: 0;
+  transform: translateY(1rem);
   text-align: center;
   width: 100%;
 }
 
 .calculator--app>header {
-  animation: enterResult 1s cubic-bezier(0.86, 0, 0.07, 1) .3s 1 forwards;
+  animation: introResult 1s cubic-bezier(0.86, 0, 0.07, 1) .7s 1 forwards;
   background-color: var(--bg-calculator);
   border-radius: 12px 12px 0 0;
+  opacity: 0;
   transform: translateY(10rem);
   padding-top: .5rem;
   position: relative;
@@ -131,7 +164,7 @@ h1 {
 }
 
 .calculator--app--result {
-  padding: .5rem;
+  padding: .5rem .5rem 1rem;
   text-align: right;
 }
 
@@ -157,7 +190,7 @@ h1 {
 }
 
 .calculator--app--buttons {
-  animation-name: enterButtons 2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s 1 forwards;
+  animation: introButtons 2s cubic-bezier(0.86, 0, 0.07, 1) 0s 1 forwards;
   border-radius: 12px;
   background-color: var(--bg-buttons);
   display: grid;
